--- a/instantwm.1
+++ b/instantwm.1
@@ -1,11 +1,11 @@
-.TH DWM 1 dwm\-VERSION
+.TH IWM 1 IWM\-VERSION
 .SH NAME
-dwm \- dynamic window manager
+instantWM \- Window manager for instantOS
 .SH SYNOPSIS
-.B dwm
+.B iwm
 .RB [ \-v ]
 .SH DESCRIPTION
-dwm is a dynamic window manager for X. It manages windows in tiled, monocle
+instantWM is a dynamic window manager for X. It manages windows in tiled, monocle
 and floating layouts. Either layout can be applied dynamically, optimising the
 environment for the application in use and the task performed.
 .P
@@ -29,7 +29,7 @@ color. The tags of the focused window are indicated with a filled square in the
 top left corner.  The tags which are applied to one or more windows are
 indicated with an empty square in the top left corner.
 .P
-dwm draws a small border around windows to indicate the focus state.
+instantWM draws a small border around windows to indicate the focus state.
 .SH OPTIONS
 .TP
 .B \-v
@@ -150,7 +150,7 @@ View all windows with any tag.
 Add/remove all windows with nth tag to/from the view.
 .TP
 .B Mod1\-Shift\-q
-Quit dwm.
+Quit instantWM.
 .SS Mouse commands
 .TP
 .B Mod1\-Button1
@@ -162,7 +162,7 @@ Toggles focused window between floating and tiled state.
 .B Mod1\-Button3
 Resize focused window while dragging. Tiled windows will be toggled to the floating state.
 .SH CUSTOMIZATION
-dwm is customized by creating a custom config.h and (re)compiling the source
+instantWM is customized by creating a custom config.h and (re)compiling the source
 code. This keeps it fast, secure and simple.
 .SH SEE ALSO
 .BR dmenu (1),
