change to instantmenu

--- a/instantwm.1
+++ b/instantwm.1
@@ -62,7 +62,7 @@ Start
 .TP
 .B Mod1\-p
 Spawn
-.BR dmenu(1)
+.BR instantmenu(1)
 for launching other programs.
 .TP
 .B Mod1\-,
@@ -165,7 +165,7 @@ Resize focused window while dragging. Tiled windows will be toggled to the float
 instantWM is customized by creating a custom config.h and (re)compiling the source
 code. This keeps it fast, secure and simple.
 .SH SEE ALSO
-.BR dmenu (1),
+.BR instantmenu (1),
 .BR st (1)
 .SH ISSUES
 Java applications which use the XToolkit/XAWT backend may draw grey windows
