--- a/instantwm.1
+++ b/instantwm.1
@@ -38,7 +38,7 @@ instantWM draws a small border around windows to indicate the focus state.
 .SH OPTIONS
 .TP
 .B \-v
-prints version information to standard output, then exits.
+prints version information to stderr, then exits.
 .SH USAGE
 .SS Status bar
 .TP
